--- a/src/components/Page/styles/page.css
+++ b/src/components/Page/styles/page.css
@@ -9,6 +9,7 @@
     background-color: rgb(255, 255, 255);
     z-index: 5;
     border-radius: 0.5rem;
+    pointer-events: auto;
 }  
 
 @media (max-width: 768px) {
