--- a/src/components/DropDownMenu/styles/dropdownmenu.css
+++ b/src/components/DropDownMenu/styles/dropdownmenu.css
@@ -14,14 +14,13 @@
 
     max-height: 0rem;
     overflow: hidden;
-    transition: max-height 0.5s;
+    transition: max-height 0.5s, background-color 0.3s ease;
 
     z-index: 10;
 }
 
 .dropdown-menu-container.dark {
   background-color: rgba(30, 30, 30, 0.6);
-  transition: background-color 0.3s;
 }
 
 .dropdown-menu-container.open-menu{
