--- a/src/routes/ProjectRoutes/styles/hero.css
+++ b/src/routes/ProjectRoutes/styles/hero.css
@@ -43,3 +43,9 @@
     max-width: 45rem;
     text-align: left;
 }
+
+@media (max-width: 768px) {
+  .sticky-nav-button {
+    display: none;
+  }
+}
