--- a/src/routes/ProjectRoutes/styles/vehicle.css
+++ b/src/routes/ProjectRoutes/styles/vehicle.css
@@ -136,3 +136,24 @@
 .video-link:hover {
     background-color: rgba(50, 50, 50, 0.8);
 }
+
+.screenshot-container {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.screenshot-image {
+  width: 100%;
+  height: auto;
+  max-width: 13rem;   
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+}
+
+@media (max-width: 768px) {
+  .sticky-nav-button {
+    display: none;
+  }
+}
